--- a/plots.ipynb
+++ b/plots.ipynb
@@ -579,10 +579,10 @@
     }
    ],
    "source": [
-    "# Note: for some strange reason, this cell only produces the correct output on my local machine.\n",
-    "# When I run this cell on a machine with a remote instance, the training run is different (and is worse).\n",
-    "rnn3 = pco.RNN(hidden_size=3, seq_len=3, load_from_zoo=True).to(\"cpu\") # It's faster to run on CPU\n",
-    "losses3 = pco.train_model(rnn3, objective=\"girard\", num_steps=500, lr_base=0.005, lr_decay_min_mult=1, track=[\"ce\", \"acc\"])"
+    "# Note: for some strange reason, this training run goes slightly differently depending on your machine.\n",
+    "# Even though the algorithm is deterministic, do not expect the exact same results as the paper.\n",
+    "rnn = pco.RNN(hidden_size=3, seq_len=3, load_from_zoo=True).to(\"cpu\") # It's faster to run on CPU\n",
+    "losses = pco.train_model(rnn, objective=\"girard\", num_steps=500, lr_base=0.005, lr_decay_min_mult=1, track=[\"ce\", \"acc\"])"
    ]
   },
   {
@@ -602,12 +602,12 @@
     }
    ],
    "source": [
-    "losses3short = {}\n",
-    "for key in losses3.keys():\n",
+    "losses_short = {}\n",
+    "for key in losses.keys():\n",
     "    if key != \"acc\":\n",
-    "        losses3short[key] = losses3[key][:297]\n",
+    "        losses_short[key] = losses[key][:297]\n",
     "\n",
-    "pco.plot_losses(losses3short, \"girard\", title=\"n=3, d=3\") # Figure in the paper."
+    "pco.plot_losses(losses_short, \"girard\", title=\"n=3, d=3\") # Figure in the paper."
    ]
   }
  ],
